mintmenu (4.8.7) helena; urgency=low

  * Replaced xdg with gmenu (Fixes broken Games category)
  * Removed calls to mouse grabs (Could fix weird bug about not being able to grab the mouse)
  * Made Pidgin a favorite in replacement of Xchat

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  19 Nov 2009 08:52:00 +0000

mintmenu (4.8.6) helena; urgency=low

  * Fixed missing i18n

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  17 Nov 2009 12:06:00 +0000

mintmenu (4.8.5) helena; urgency=low

  * Mint logo by default
  * Mouse over the logo and it highlights
  * Fixed highlight issue with buttons
  * Fixed case incoherence in system items

 -- Clement Lefebvre <root@linuxmint.com>  Fri,  6 Nov 2009 13:47:00 +0000

mintmenu (4.8.4) helena; urgency=low

  * Changed translation framework

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  3 Nov 2009 11:27:00 +0000

mintmenu (4.8.3) helena; urgency=low

  * Added latest changes from chlodapp

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  2 Nov 2009 18:19:00 +0000

mintmenu (4.8.2) helena; urgency=low

  * Changed default favorites

 -- Clement Lefebvre <root@linuxmint.com>  Fri,  30 Oct 2009 18:21:00 +0000

mintmenu (4.8.1) helena; urgency=low

  * Dependency on mint-common
  * Updated calls to newer pyinotify API
  * Updated path of keybinder API
  * Removed dependency on mintinstall

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  8 Oct 2009 10:26:00 +0000

mintmenu (4.8.0) helena; urgency=low

  * Blueprint implemented: https://blueprints.launchpad.net/linuxmint/+spec/generic-branding

 -- Clement Lefebvre <root@linuxmint.com>  Wed,  29 Jul 2009 22:48:00 +0000

mintmenu (4.7.9) gloria; urgency=low

  * Fix: Hitting enter on search does nothing (https://bugs.launchpad.net/bugs/399990)

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Jul 2009 16:02:00 +0000

mintmenu (4.7.8) gloria; urgency=low

  * Fix: launching terminal=true applications (example: htop)
