@@ -3,6 +3,7 @@ mintmenu (4.8.7) helena; urgency=low
   * Replaced xdg with gmenu (Fixes broken Games category)
   * Removed calls to mouse grabs (Could fix weird bug about not being able to grab the mouse)
   * Made Pidgin a favorite in replacement of Xchat
+  * Hover menu icon now uses pygtk to brighten the chosen picture: Fixes problem with custom menu icons
 
  -- Clement Lefebvre <root@linuxmint.com>  Thu,  19 Nov 2009 08:52:00 +0000
 
